crates/wdl-engine/tests/workflows/enum-unknown-choice/error.txt
error: unknown choice named `InvalidChoice` for enum `Status`
   ┌─ tests/workflows/enum-unknown-choice/source.wdl:10:23
   │
10 │     Status s = Status.InvalidChoice
   │                       ^^^^^^^^^^^^^^ the choice is referenced here

